Tue Apr  6 09:47:12 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Utils_T.cpp:
          Resolved compile issue on Linux.

Tue Apr  6 08:51:51 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/idl/dds_rtf2_dcps.idl:
          Layout changes

        * connectors/dds4ccm/impl/dds/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Write_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_TopicBase_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Read_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Get_T.cpp:
          Made use of typedefs for templated classes.

        * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.cpp:
          When an extended port is partially or fully connected,
          all basic ports in this extended port are initialised.
          When an extended port is not connected. non of the basic
          ports will be connected.
          This means that the performance should increase and
          the usage of ports (and configuring them in the deployment
          plans) is more strict.

        * connectors/dds4ccm/impl/dds/Getter_T.h:
        * connectors/dds4ccm/impl/dds/Getter_T.cpp:
        * connectors/dds4ccm/impl/dds/Reader_T.h:
        * connectors/dds4ccm/impl/dds/Reader_T.cpp:
          Fixed QueryCondition support.
          Also rewritten/added some Doxygen.

        * connectors/dds4ccm/tests/CSLSampleRejected/Sender/CSL_SRTest_Sender.idl: